See https://github.com/Deuce1058/yardi/issues/110
yardi\
  ejbModule\
    com\yardi\ejb\
      EditPasswordPolicyBean
      LoginUserProfileBean
      UserProfileBean

      test\
        LoginStateBean

  src\com\yardi\
    QSECOFR\
      EditUserProfileService